[package]
name = "log_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.22"
nom = "7.1.1"
nom-supreme = "0.7.0"
chrono = "0.4"
glob = "0.3.0"
clap = { version = "3.1.8", features = ["derive"] } 
ansi_term = "0.12.1"
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"] }
flume = "0.10.12"
futures = "0.3.21"